--- a/todos/templates/todos/home.html
+++ b/todos/templates/todos/home.html
@@ -18,7 +18,7 @@
         <h5><b>Login</b> or <b>Signup</b> to start taking notes</h5>
         <hr class="my-4">
 
-        <p>This is an Open Source Digital Note taking App, You can check out the source code and Fork me on <b>Github</b>.</p>
+        <p>This is an Open Source Digital Note taking App, You can check out the source code and Fork on <a href="https://github.com/iKausik/digital_notebook" style="text-decoration: none; color: #000000;"><b>Github</b></a>.</p>
 
     </div>
 
