--- a/todos/templates/todos/layout.html
+++ b/todos/templates/todos/layout.html
@@ -8,8 +8,10 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'todos/style.css' %}" />
     <link rel="stylesheet" href="{% static 'todos/bootstrap-4/css/bootstrap.min.css' %}" />
+    <link rel="icon" href="{% static 'todos/icon.png' %}" />
+    <link rel="manifest" href="{% static 'todos/manifest.json' %}" />
 
-    <title>Digital NoteBook</title>
+    <title>Digital NoteBook - Developed by Kausik Das</title>
 </head>
 <body>
 
