github corner svg added

--- a/todos/templates/todos/layout.html
+++ b/todos/templates/todos/layout.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+        {% include 'todos/partials/_github-corner.html' %}
+
         {% include 'todos/partials/_header.html' %} 
     
     <div class="container" style="padding-top: 20px; text-align: center;">
